<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.oluwafemi.currencyconverter.viewmodel.MainActivityViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            style="@style/ToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/hamburger_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_hamburger"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorTeal"
                    android:textSize="20sp"
                    android:layout_marginRight="16dp"
                    app:fontFamily="@font/poppins_semibold"
                    app:layout_constraintBottom_toBottomOf="@id/hamburger_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/hamburger_icon"
                    android:layout_marginEnd="16dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".MainActivity">

                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/curr_calc"
                    android:textColor="@color/colorBlue"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/poppins_semibold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    app:cardBackgroundColor="@color/colorTeal"
                    app:cardCornerRadius="5dp"
                    app:layout_constraintBottom_toBottomOf="@id/title_text"
                    app:layout_constraintStart_toEndOf="@id/title_text"
                    app:layout_constraintTop_toTopOf="@id/title_text"
                    app:layout_constraintVertical_bias="0.827" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/base_currency"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginTop="30dp"
                    app:boxBackgroundColor="@color/colorTextBox"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:padding="16dp"
                        android:text="@string/base"
                        android:textColor="@color/darkColorText"
                        app:fontFamily="@font/poppins_semibold" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/second_currency"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:enabled="false"
                    app:boxBackgroundColor="@color/colorTextBox"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/base_currency">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:inputType="number"
                        android:padding="16dp"
                        android:text="@{viewModel.result}"
                        android:textColor="@color/darkColorText"
                        app:fontFamily="@font/poppins_semibold" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dropdown_base"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/darkColorText"
                    app:boxBackgroundColor="@color/colorTextBox"
                    app:fontFamily="@font/poppins_semibold"
                    app:layout_constraintBottom_toBottomOf="@id/convert"
                    app:layout_constraintEnd_toStartOf="@id/convert"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/convert">

                    <AutoCompleteTextView
                        android:id="@+id/base_currency_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/convert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:srcCompat="@drawable/ic_convert"
                    app:layout_constraintEnd_toStartOf="@id/dropdown_second"
                    app:layout_constraintStart_toEndOf="@id/dropdown_base"
                    app:layout_constraintTop_toBottomOf="@id/second_currency" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dropdown_second"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:textColor="@color/darkColorText"
                    app:boxBackgroundColor="@color/colorTextBox"
                    app:fontFamily="@font/poppins_semibold"
                    app:layout_constraintBottom_toBottomOf="@id/convert"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/convert"
                    app:layout_constraintTop_toTopOf="@+id/convert">

                    <AutoCompleteTextView
                        android:id="@+id/second_currency_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/convert_btn"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginRight="16dp"
                    android:backgroundTint="@color/colorTeal"
                    android:padding="16dp"
                    android:text="@string/convert"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextBox"
                    android:textSize="18sp"
                    app:fontFamily="@font/poppins_semibold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/convert" />

                <TextView
                    android:id="@+id/just_a_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/extra_text"
                    android:textColor="@color/colorBlue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/convert_btn" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/layout_for_graph"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/just_a_text">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.jjoe64.graphview.GraphView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/chart_data"
                            android:layout_margin="16dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>
                        <TextView
                            app:layout_constraintTop_toBottomOf="@+id/chart_data"
                            android:textColor="@color/colorTextBox"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/last_text"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </LinearLayout>
</layout>